@@ -7,6 +7,7 @@
 - Rolled back the FASTA header checking for IonQuant.
 - PTMProphet was updated to v6.2.0
 - The processing speed, including IO operations and database reading received a major upgrade (@guoci)
+- The purity collumn will be always visible in the PSM table.
 
 ### Fixed
 - Updated razor mapping rules to reinforce the decoy tagging of razor proteins.
